tests/expectations/parser/functions/mode_outside_tuple.out
Error [EPAR0370005]: expected an identifier -- found '('
    --> test:3:7
     |
   3 |     fn(a: u8) -> public (u8, u8) {
     |       ^
